--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,8 +16,10 @@ steps:
     testResultsFiles: '**src/test/java/MyTest.xml'
     goals: 'package'
 
-- script: cd target
-          ls -a
+- script: |
+    cd target
+    ls -a
+    
 # - task: PublishBuildArtifacts@1
 #   inputs:
 #     PathtoPublish: 'target/**.jar'
