--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,5 +21,5 @@ steps:
   displayName: Publish build artifact
   inputs:
     PathtoPublish: 'target/helloworld.war'
-    ArtifactName: java-app-artifact
+    ArtifactName: artifact
 
